created a transposed dataframe for nans.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "id": "7b14672e",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "0cd544bc",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "a5c858d6",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "Length: 32574, dtype: bool"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "461a6265",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "[165 rows x 12 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "0f2dda93",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "6dbe13b3",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "b1c6f742",
    "metadata": {},
    "outputs": [
@@ -417,119 +417,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "6a9ffd91",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "person_age                       0\n",
-       "person_income                    0\n",
-       "person_home_ownership            0\n",
-       "person_emp_length              887\n",
-       "loan_intent                      0\n",
-       "loan_grade                       0\n",
-       "loan_amnt                        0\n",
-       "loan_int_rate                 3094\n",
-       "loan_status                      0\n",
-       "loan_percent_income              0\n",
-       "cb_person_default_on_file        0\n",
-       "cb_person_cred_hist_length       0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "credit_risk_dataset.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "e3665d35",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "person_age                    0.000000\n",
-       "person_income                 0.000000\n",
-       "person_home_ownership         0.000000\n",
-       "person_emp_length             0.027369\n",
-       "loan_intent                   0.000000\n",
-       "loan_grade                    0.000000\n",
-       "loan_amnt                     0.000000\n",
-       "loan_int_rate                 0.095467\n",
-       "loan_status                   0.000000\n",
-       "loan_percent_income           0.000000\n",
-       "cb_person_default_on_file     0.000000\n",
-       "cb_person_cred_hist_length    0.000000\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "credit_risk_dataset.isna().sum()/len(credit_risk_dataset)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "bffae2b4",
    "metadata": {},
    "source": [
     "##### Features that contain NaNs are missing only less than 10% of their total data - no cause for dropping columns (albeit this step would have been performed in the EDA section)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "dbe90269",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "credit_risk_dataset.isna().all(axis=1).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "1eea013a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "credit_risk_dataset.isna().all(axis=0).sum()"
    ]
   },
   {
@@ -566,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "71e1f0d8",
    "metadata": {},
    "outputs": [],
@@ -576,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "71055147",
    "metadata": {},
    "outputs": [],
@@ -586,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "f581eb41",
    "metadata": {},
    "outputs": [
@@ -633,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "id": "5955048f",
    "metadata": {},
    "outputs": [],
@@ -643,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "7d606cb2",
    "metadata": {},
    "outputs": [],
@@ -655,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "bd4bc3b0",
    "metadata": {},
    "outputs": [
@@ -696,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "id": "43024f28",
    "metadata": {},
    "outputs": [],
@@ -706,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "id": "c4eae303",
    "metadata": {},
    "outputs": [],
@@ -716,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "id": "0f96b592",
    "metadata": {},
    "outputs": [
@@ -754,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "id": "33a0f407",
    "metadata": {},
    "outputs": [],
@@ -768,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "id": "1de31965",
    "metadata": {},
    "outputs": [],
@@ -778,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "id": "fc1ce07f",
    "metadata": {},
    "outputs": [
@@ -873,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "id": "fefe4801",
    "metadata": {},
    "outputs": [
@@ -912,7 +804,7 @@
        " 'wls']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "id": "d2bfb211",
    "metadata": {},
    "outputs": [],
@@ -933,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "id": "f3e4851d",
    "metadata": {},
    "outputs": [],
@@ -943,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "id": "e363c2fa",
    "metadata": {},
    "outputs": [
@@ -1123,7 +1015,7 @@
        "[32409 rows x 7 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "id": "702845c3",
    "metadata": {},
    "outputs": [],
@@ -1145,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "id": "474a3fd7",
    "metadata": {},
    "outputs": [
@@ -1158,8 +1050,8 @@
       "Dep. Variable:            pel_missing   No. Observations:                29315\n",
       "Model:                          Logit   Df Residuals:                    29308\n",
       "Method:                           MLE   Df Model:                            6\n",
-      "Date:                Sat, 13 Dec 2025   Pseudo R-squ.:                 0.06767\n",
-      "Time:                        12:49:44   Log-Likelihood:                -3488.0\n",
+      "Date:                Sun, 14 Dec 2025   Pseudo R-squ.:                 0.06767\n",
+      "Time:                        21:35:49   Log-Likelihood:                -3488.0\n",
       "converged:                       True   LL-Null:                       -3741.2\n",
       "Covariance Type:            nonrobust   LLR p-value:                3.680e-106\n",
       "==============================================================================================\n",
@@ -1178,8 +1070,8 @@
       "Dep. Variable:            lir_missing   No. Observations:                31522\n",
       "Model:                          Logit   Df Residuals:                    31515\n",
       "Method:                           MLE   Df Model:                            6\n",
-      "Date:                Sat, 13 Dec 2025   Pseudo R-squ.:               0.0002995\n",
-      "Time:                        12:49:44   Log-Likelihood:                -9966.4\n",
+      "Date:                Sun, 14 Dec 2025   Pseudo R-squ.:               0.0002995\n",
+      "Time:                        21:35:49   Log-Likelihood:                -9966.4\n",
       "converged:                       True   LL-Null:                       -9969.4\n",
       "Covariance Type:            nonrobust   LLR p-value:                    0.4265\n",
       "==============================================================================================\n",
@@ -1240,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "id": "68e77781",
    "metadata": {},
    "outputs": [],
@@ -1252,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "id": "0c7b3d04",
    "metadata": {},
    "outputs": [],
@@ -1264,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "id": "cc7d2c12",
    "metadata": {},
    "outputs": [
@@ -1313,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 29,
    "id": "0828e0d0",
    "metadata": {},
    "outputs": [],
@@ -1323,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 30,
    "id": "d18d4ffa",
    "metadata": {},
    "outputs": [],
@@ -1336,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
    "id": "b04a20ba",
    "metadata": {},
    "outputs": [],
@@ -1349,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 32,
    "id": "27132722",
    "metadata": {},
    "outputs": [
@@ -1362,8 +1254,8 @@
       "Dep. Variable:            pel_missing   No. Observations:                32409\n",
       "Model:                          Logit   Df Residuals:                    32396\n",
       "Method:                           MLE   Df Model:                           12\n",
-      "Date:                Sat, 13 Dec 2025   Pseudo R-squ.:                 0.02413\n",
-      "Time:                        12:58:14   Log-Likelihood:                -3968.4\n",
+      "Date:                Sun, 14 Dec 2025   Pseudo R-squ.:                 0.02413\n",
+      "Time:                        21:35:49   Log-Likelihood:                -3968.4\n",
       "converged:                       True   LL-Null:                       -4066.5\n",
       "Covariance Type:            nonrobust   LLR p-value:                 1.974e-35\n",
       "==================================================================================================\n",
@@ -1388,8 +1280,8 @@
       "Dep. Variable:            lir_missing   No. Observations:                32409\n",
       "Model:                          Logit   Df Residuals:                    32396\n",
       "Method:                           MLE   Df Model:                           12\n",
-      "Date:                Sat, 13 Dec 2025   Pseudo R-squ.:                0.001096\n",
-      "Time:                        12:58:14   Log-Likelihood:                -10198.\n",
+      "Date:                Sun, 14 Dec 2025   Pseudo R-squ.:                0.001096\n",
+      "Time:                        21:35:49   Log-Likelihood:                -10198.\n",
       "converged:                       True   LL-Null:                       -10209.\n",
       "Covariance Type:            nonrobust   LLR p-value:                   0.03351\n",
       "==================================================================================================\n",
@@ -1430,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "id": "18a1d89c",
    "metadata": {},
    "outputs": [
@@ -1501,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 34,
    "id": "124f0e8f",
    "metadata": {},
    "outputs": [
@@ -1511,7 +1403,7 @@
        "Text(0.5, 1.0, 'Missingness of PEL related to Personal Income')"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1537,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 35,
    "id": "d1177244",
    "metadata": {},
    "outputs": [
@@ -1547,7 +1439,7 @@
        "Text(0.5, 1.0, 'Missingness of PEL related to Loan Amount')"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1573,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 36,
    "id": "b318d000",
    "metadata": {},
    "outputs": [
@@ -1583,7 +1475,7 @@
        "Text(0.5, 1.0, 'Missingness of LIR related to Personal Income')"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1609,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 37,
    "id": "27e9c9d9",
    "metadata": {},
    "outputs": [
@@ -1619,7 +1511,7 @@
        "Text(0.5, 1.0, 'Missingness of LIR related to Personal Income')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1669,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 38,
    "id": "346dd572",
    "metadata": {},
    "outputs": [
@@ -1959,7 +1851,7 @@
        "[32409 rows x 14 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1970,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "6dcabcfa",
    "metadata": {},
    "outputs": [],
@@ -1983,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "10243efb",
    "metadata": {},
    "outputs": [],
@@ -1993,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 41,
    "id": "467a4c56",
    "metadata": {},
    "outputs": [],
@@ -2004,6 +1896,136 @@
     "    test_size = 0.3,\n",
     "    random_state = 42\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e665c10",
+   "metadata": {},
+   "source": [
+    "## Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "48fae6bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "person_age                       0\n",
+       "person_income                    0\n",
+       "person_home_ownership            0\n",
+       "person_emp_length              887\n",
+       "loan_intent                      0\n",
+       "loan_grade                       0\n",
+       "loan_amnt                        0\n",
+       "loan_int_rate                 3094\n",
+       "loan_status                      0\n",
+       "loan_percent_income              0\n",
+       "cb_person_default_on_file        0\n",
+       "cb_person_cred_hist_length       0\n",
+       "pel_missing                      0\n",
+       "lir_missing                      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "d35768f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "person_age                    0.000000\n",
+       "person_income                 0.000000\n",
+       "person_home_ownership         0.000000\n",
+       "person_emp_length             0.027369\n",
+       "loan_intent                   0.000000\n",
+       "loan_grade                    0.000000\n",
+       "loan_amnt                     0.000000\n",
+       "loan_int_rate                 0.095467\n",
+       "loan_status                   0.000000\n",
+       "loan_percent_income           0.000000\n",
+       "cb_person_default_on_file     0.000000\n",
+       "cb_person_cred_hist_length    0.000000\n",
+       "pel_missing                   0.000000\n",
+       "lir_missing                   0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.isna().sum()/len(credit_risk_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "ca46f277",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.isna().all(axis=1).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "dec4ec46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.isna().all(axis=0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "89c21706",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nan_df = pd.DataFrame(credit_risk_dataset.isna().sum()).T"
    ]
   },
   {
