--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "id": "7b14672e",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,8 @@
     "from scipy import stats\n",
     "import statsmodels.api as sm\n",
     "import statsmodels.formula.api as smf\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import missingno as msno"
    ]
   },
   {
