--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 143,
    "id": "7b14672e",
    "metadata": {},
    "outputs": [],
@@ -16,11 +16,15 @@
     "import seaborn as sns\n",
     "from pyampute.exploration.md_patterns import mdPatterns\n",
     "from pyampute.exploration.mcar_statistical_tests import MCARTest\n",
+    "import missingno as msno\n",
+    "\n",
+    "# Modeling\n",
     "from scipy import stats\n",
     "import statsmodels.api as sm\n",
     "import statsmodels.formula.api as smf\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import missingno as msno"
+    "from sklearn.experimental import enable_iterative_imputer\n",
+    "from sklearn.impute import IterativeImputer"
    ]
   },
   {
@@ -2245,6 +2249,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b0e74c64",
+   "metadata": {},
+   "source": [
+    "### Handling Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6fa66eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IterativeImputer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2eb8af8a",
    "metadata": {},
    "source": [
@@ -2721,6 +2743,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ba46a0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "236ec92a",
    "metadata": {},
    "outputs": [],
    "source": []
