--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2948,48 +2948,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
-   "id": "55fe6c51",
+   "execution_count": 94,
+   "id": "ae02b944",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "No numerical variables found in this dataframe. Please check variable format with pandas dtypes.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[313]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m w = Winsorizer(capping_method=\u001b[33m'\u001b[39m\u001b[33miqr\u001b[39m\u001b[33m'\u001b[39m, tail=\u001b[33m'\u001b[39m\u001b[33mboth\u001b[39m\u001b[33m'\u001b[39m, fold=\u001b[32m1.5\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mw\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit_transform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train_transformed\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\utils\\_set_output.py:316\u001b[39m, in \u001b[36m_wrap_method_output.<locals>.wrapped\u001b[39m\u001b[34m(self, X, *args, **kwargs)\u001b[39m\n\u001b[32m    314\u001b[39m \u001b[38;5;129m@wraps\u001b[39m(f)\n\u001b[32m    315\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mwrapped\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, *args, **kwargs):\n\u001b[32m--> \u001b[39m\u001b[32m316\u001b[39m     data_to_wrap = \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    317\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data_to_wrap, \u001b[38;5;28mtuple\u001b[39m):\n\u001b[32m    318\u001b[39m         \u001b[38;5;66;03m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[32m    319\u001b[39m         return_tuple = (\n\u001b[32m    320\u001b[39m             _wrap_data_with_container(method, data_to_wrap[\u001b[32m0\u001b[39m], X, \u001b[38;5;28mself\u001b[39m),\n\u001b[32m    321\u001b[39m             *data_to_wrap[\u001b[32m1\u001b[39m:],\n\u001b[32m    322\u001b[39m         )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\base.py:907\u001b[39m, in \u001b[36mTransformerMixin.fit_transform\u001b[39m\u001b[34m(self, X, y, **fit_params)\u001b[39m\n\u001b[32m    892\u001b[39m         warnings.warn(\n\u001b[32m    893\u001b[39m             (\n\u001b[32m    894\u001b[39m                 \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mThis object (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.\u001b[34m__class__\u001b[39m.\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m) has a `transform`\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m    902\u001b[39m             \u001b[38;5;167;01mUserWarning\u001b[39;00m,\n\u001b[32m    903\u001b[39m         )\n\u001b[32m    905\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m y \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    906\u001b[39m     \u001b[38;5;66;03m# fit method of arity 1 (unsupervised transformation)\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m907\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mfit_params\u001b[49m\u001b[43m)\u001b[49m.transform(X)\n\u001b[32m    908\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    909\u001b[39m     \u001b[38;5;66;03m# fit method of arity 2 (supervised transformation)\u001b[39;00m\n\u001b[32m    910\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.fit(X, y, **fit_params).transform(X)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\feature_engine\\outliers\\base_outlier.py:219\u001b[39m, in \u001b[36mWinsorizerBase.fit\u001b[39m\u001b[34m(self, X, y)\u001b[39m\n\u001b[32m    217\u001b[39m \u001b[38;5;66;03m# find or check for numerical variables\u001b[39;00m\n\u001b[32m    218\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.variables \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m219\u001b[39m     \u001b[38;5;28mself\u001b[39m.variables_ = \u001b[43mfind_numerical_variables\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    220\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    221\u001b[39m     \u001b[38;5;28mself\u001b[39m.variables_ = check_numerical_variables(X, \u001b[38;5;28mself\u001b[39m.variables)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\feature_engine\\variable_handling\\find_variables.py:48\u001b[39m, in \u001b[36mfind_numerical_variables\u001b[39m\u001b[34m(X)\u001b[39m\n\u001b[32m     46\u001b[39m variables = \u001b[38;5;28mlist\u001b[39m(X.select_dtypes(include=\u001b[33m\"\u001b[39m\u001b[33mnumber\u001b[39m\u001b[33m\"\u001b[39m).columns)\n\u001b[32m     47\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(variables) == \u001b[32m0\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[32m     49\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mNo numerical variables found in this dataframe. Please check \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     50\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mvariable format with pandas dtypes.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     51\u001b[39m     )\n\u001b[32m     52\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m variables\n",
-      "\u001b[31mTypeError\u001b[39m: No numerical variables found in this dataframe. Please check variable format with pandas dtypes."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "w = Winsorizer(capping_method='iqr', tail='both', fold=1.5)\n",
-    "w.fit_transform(X_train_transformed)"
+    "numeric_cols = list(numeric_dataset.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
-   "id": "236ec92a",
+   "execution_count": 98,
+   "id": "55fe6c51",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pd.DataFrame(\n",
-    "#     data = X_train_transformed,\n",
-    "#     columns = ct_outlier.get_feature_names_out()\n",
-    "# )"
+    "w = Winsorizer(capping_method='iqr', tail='both', fold=1.5, variables = numeric_cols)\n",
+    "X_train[numeric_dataset.columns] = w.fit_transform(X_train[numeric_dataset.columns])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "1e04acb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The amount of outliers in credit risk dataset for the person_age is: 0\n",
+      "The amount of outliers in credit risk dataset for the person_income is: 0\n",
+      "The amount of outliers in credit risk dataset for the person_emp_length is: 0\n",
+      "The amount of outliers in credit risk dataset for the loan_amnt is: 0\n",
+      "The amount of outliers in credit risk dataset for the loan_int_rate is: 0\n",
+      "The amount of outliers in credit risk dataset for the loan_percent_income is: 0\n",
+      "The amount of outliers in credit risk dataset for the cb_person_cred_hist_length is: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "outlier_dict = dict()\n",
+    "for numeric_feature in numeric_dataset:\n",
+    "    Q1 = X_train[numeric_feature].quantile(0.25)\n",
+    "    Q3 = X_train[numeric_feature].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    lower_bound = Q1 - (IQR * 1.5)\n",
+    "    upper_bound = Q3 + (1.5 * IQR)\n",
+    "    outlier_count = X_train[(X_train[numeric_feature] < lower_bound) | (X_train[numeric_feature] > upper_bound)].shape[0]\n",
+    "    print(f\"The amount of outliers in credit risk dataset for the {numeric_feature} is:\", outlier_count)\n",
+    "    outlier_dict[numeric_feature + \"_outlier_count\"] = outlier_count"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e04acb6",
+   "id": "5b713b9c",
    "metadata": {},
    "outputs": [],
    "source": []
