--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 126,
    "id": "7b14672e",
    "metadata": {},
    "outputs": [],
@@ -20,13 +20,14 @@
     "\n",
     "# Modeling\n",
     "from scipy import stats\n",
+    "from scipy.stats import shapiro\n",
     "from scipy.stats.mstats import winsorize\n",
     "import statsmodels.api as sm\n",
     "import statsmodels.formula.api as smf\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.experimental import enable_iterative_imputer\n",
     "from sklearn.impute import IterativeImputer\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler, PowerTransformer\n",
     "from sklearn.compose import ColumnTransformer, make_column_selector\n",
     "from feature_engine.outliers import Winsorizer"
    ]
@@ -3092,16 +3093,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "466f2f86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm.qqplot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "405c3521",
    "metadata": {},
    "outputs": [
@@ -3151,8 +3142,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "65ac81bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Statistic: 0.8855 | p-value: 0.0000 | conclusion: Reject H0. The data in person_age is not normally distributed.\n",
+      "Test Statistic: 0.9272 | p-value: 0.0000 | conclusion: Reject H0. The data in person_income is not normally distributed.\n",
+      "Test Statistic: 0.9241 | p-value: 0.0000 | conclusion: Reject H0. The data in person_emp_length is not normally distributed.\n",
+      "Test Statistic: 0.9243 | p-value: 0.0000 | conclusion: Reject H0. The data in loan_amnt is not normally distributed.\n",
+      "Test Statistic: 0.9818 | p-value: 0.0000 | conclusion: Reject H0. The data in loan_int_rate is not normally distributed.\n",
+      "Test Statistic: 0.9361 | p-value: 0.0000 | conclusion: Reject H0. The data in loan_percent_income is not normally distributed.\n",
+      "Test Statistic: 0.8535 | p-value: 0.0000 | conclusion: Reject H0. The data in cb_person_cred_hist_length is not normally distributed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for numeric_feature in numeric_dataset:\n",
+    "    statistic, pvalue = shapiro(X_train[numeric_feature])\n",
+    "    is_normal = f\"Reject H0. The data in {numeric_feature} is not normally distributed.\" if pvalue < 0.05 else \"Fail to reject H0 (Appears Normal)\"\n",
+    "    print(f\"Test Statistic: {statistic:.4f} | p-value: {pvalue:.4f} | conclusion: {is_normal}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e78988a",
    "metadata": {},
    "outputs": [],
    "source": []
