binning numeric varbs for practice purposes.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -3904,6 +3904,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78fd514d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "526cbdaf",
    "metadata": {},
@@ -3913,7 +3921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 143,
    "id": "2594a31c",
    "metadata": {},
    "outputs": [],
@@ -3923,26 +3931,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "id": "ee8a1ce0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "discretizer  = KBinsDiscretizer(n_bins=3, encode='ordinal', strategy='quantile')\n",
-    "discretizer.fit_transform(X_train)\n",
-    "discretizer.transform(X_test)"
+    "discretizer  = KBinsDiscretizer(n_bins=3, encode='onehot-dense', strategy='quantile')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "e3147517",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\preprocessing\\_discretization.py:304: FutureWarning: The current default behavior, quantile_method='linear', will be changed to quantile_method='averaged_inverted_cdf' in scikit-learn version 1.9 to naturally support sample weight equivalence properties by default. Pass quantile_method='averaged_inverted_cdf' explicitly to silence this warning.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\preprocessing\\_discretization.py:304: FutureWarning: The current default behavior, quantile_method='linear', will be changed to quantile_method='averaged_inverted_cdf' in scikit-learn version 1.9 to naturally support sample weight equivalence properties by default. Pass quantile_method='averaged_inverted_cdf' explicitly to silence this warning.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\preprocessing\\_discretization.py:304: FutureWarning: The current default behavior, quantile_method='linear', will be changed to quantile_method='averaged_inverted_cdf' in scikit-learn version 1.9 to naturally support sample weight equivalence properties by default. Pass quantile_method='averaged_inverted_cdf' explicitly to silence this warning.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\preprocessing\\_discretization.py:304: FutureWarning: The current default behavior, quantile_method='linear', will be changed to quantile_method='averaged_inverted_cdf' in scikit-learn version 1.9 to naturally support sample weight equivalence properties by default. Pass quantile_method='averaged_inverted_cdf' explicitly to silence this warning.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\preprocessing\\_discretization.py:304: FutureWarning: The current default behavior, quantile_method='linear', will be changed to quantile_method='averaged_inverted_cdf' in scikit-learn version 1.9 to naturally support sample weight equivalence properties by default. Pass quantile_method='averaged_inverted_cdf' explicitly to silence this warning.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\preprocessing\\_discretization.py:304: FutureWarning: The current default behavior, quantile_method='linear', will be changed to quantile_method='averaged_inverted_cdf' in scikit-learn version 1.9 to naturally support sample weight equivalence properties by default. Pass quantile_method='averaged_inverted_cdf' explicitly to silence this warning.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\sklearn\\preprocessing\\_discretization.py:304: FutureWarning: The current default behavior, quantile_method='linear', will be changed to quantile_method='averaged_inverted_cdf' in scikit-learn version 1.9 to naturally support sample weight equivalence properties by default. Pass quantile_method='averaged_inverted_cdf' explicitly to silence this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "for numeric_feature in numeric_dataset:\n",
+    "    X_train_discretized[numeric_feature] = discretizer.fit_transform(X_train_discretized[[numeric_feature]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3147517",
+   "id": "12bf0bd9",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for numeric_feature in numeric_dataset:\n",
-    "    X_trained_scaled[numeric_feature] = scaler_minmax.fit_transform(X_trained_scaled[[numeric_feature]])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
