playing with label encoder.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 147,
    "id": "7b14672e",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.experimental import enable_iterative_imputer\n",
     "from sklearn.impute import IterativeImputer\n",
-    "from sklearn.preprocessing import StandardScaler, PowerTransformer, QuantileTransformer, MinMaxScaler, KBinsDiscretizer, Binarizer, PolynomialFeatures\n",
+    "from sklearn.preprocessing import StandardScaler, PowerTransformer, QuantileTransformer, MinMaxScaler, KBinsDiscretizer, Binarizer, PolynomialFeatures, LabelEncoder, OneHotEncoder, OrdinalEncoder\n",
     "from sklearn.compose import ColumnTransformer, make_column_selector\n",
     "from feature_engine.outliers import Winsorizer"
    ]
@@ -4804,9 +4804,179 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "677ed028",
+   "metadata": {},
+   "source": [
+    "## Labeled Encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "62dc94c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_labeled = X_train_missing.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "8134c8d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person_home_ownership</th>\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>loan_grade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>OWN</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RENT</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RENT</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>OWN</td>\n",
+       "      <td>VENTURE</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32569</th>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32570</th>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32571</th>\n",
+       "      <td>RENT</td>\n",
+       "      <td>HOMEIMPROVEMENT</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32572</th>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32573</th>\n",
+       "      <td>RENT</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32409 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      person_home_ownership      loan_intent loan_grade\n",
+       "0                       OWN        EDUCATION          B\n",
+       "1                  MORTGAGE          MEDICAL          C\n",
+       "2                      RENT          MEDICAL          C\n",
+       "3                      RENT          MEDICAL          C\n",
+       "4                       OWN          VENTURE          A\n",
+       "...                     ...              ...        ...\n",
+       "32569              MORTGAGE         PERSONAL          C\n",
+       "32570              MORTGAGE         PERSONAL          A\n",
+       "32571                  RENT  HOMEIMPROVEMENT          B\n",
+       "32572              MORTGAGE         PERSONAL          B\n",
+       "32573                  RENT          MEDICAL          B\n",
+       "\n",
+       "[32409 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5699fa98",
+   "id": "96839149",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 0, 3, ..., 3, 0, 3])"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LabelEncoder(\n",
+    ").fit_transform(categorical_df.person_home_ownershsip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80e4e6b5",
    "metadata": {},
    "outputs": [],
    "source": []
