--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -4270,6 +4270,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b066abd4",
+   "metadata": {},
+   "source": [
+    "## Polynomial Features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 140,
    "id": "a481f556",
@@ -5389,14 +5397,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a55e12a",
-   "metadata": {},
-   "source": [
-    "## Polynomial Transformation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "fc575b28",
    "metadata": {},
    "source": [
@@ -5882,63 +5882,367 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c912090",
+   "execution_count": 337,
+   "id": "6ada976f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rank_order = ['Low', 'Medium', 'High']"
+    "X_train_ordinal = X_train_missing.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8e6c6d87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "order_mapping = {category: rank for rank, category in enumerate(rank_order)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ee0cdc5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train['ordinal_encoded'] = X_train['ordinal_col'].map(order_mapping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a94d3cc1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test['ordinal_encoded'] = X_test['ordinal_col'].map(order_mapping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86e42fe2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train.drop('ordinal_col', axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 342,
    "id": "47a241a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "encoder = OrdinalEncoder(categories=[X_train_ordinal['loan_intent'].cat.categories])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 348,
+   "id": "acd92b1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_ordinal['loan_intent'] = encoder.fit_transform(X_train_ordinal[['loan_intent']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 349,
+   "id": "9787774e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['loan_intent'], dtype=object)"
+      ]
+     },
+     "execution_count": 349,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoder.get_feature_names_out()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 351,
+   "id": "e6550470",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoded_dataframe = pd.DataFrame(\n",
+    "    X_train_ordinal,\n",
+    "    columns=encoder.get_feature_names_out(),\n",
+    "    index=X_train_ordinal.index\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "id": "cac67ae8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person_age</th>\n",
+       "      <th>person_income</th>\n",
+       "      <th>person_home_ownership</th>\n",
+       "      <th>person_emp_length</th>\n",
+       "      <th>loan_grade</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>loan_int_rate</th>\n",
+       "      <th>loan_percent_income</th>\n",
+       "      <th>cb_person_default_on_file</th>\n",
+       "      <th>cb_person_cred_hist_length</th>\n",
+       "      <th>pel_missing</th>\n",
+       "      <th>lir_missing</th>\n",
+       "      <th>loan_intent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20109</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>38196.0</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>B</td>\n",
+       "      <td>10750.0</td>\n",
+       "      <td>10.750000</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>False</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20513</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>54996.0</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>4800.0</td>\n",
+       "      <td>6.030000</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1274</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>52500.0</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>B</td>\n",
+       "      <td>16000.0</td>\n",
+       "      <td>12.690000</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31364</th>\n",
+       "      <td>37.0</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>B</td>\n",
+       "      <td>22000.0</td>\n",
+       "      <td>8.880000</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>False</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27571</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>150000.0</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>18000.0</td>\n",
+       "      <td>11.620365</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29961</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>35000.0</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>D</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>15.370000</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>True</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5390</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>5.790000</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>860</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>23000.0</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>C</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>13.350000</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15795</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>79200.0</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>D</td>\n",
+       "      <td>16000.0</td>\n",
+       "      <td>12.670000</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23776</th>\n",
+       "      <td>33.0</td>\n",
+       "      <td>33504.0</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>B</td>\n",
+       "      <td>9600.0</td>\n",
+       "      <td>10.990000</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>22686 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       person_age  person_income person_home_ownership  person_emp_length  \\\n",
+       "20109        28.0        38196.0              MORTGAGE                5.0   \n",
+       "20513        30.0        54996.0                  RENT                2.0   \n",
+       "1274         22.0        52500.0                  RENT                1.0   \n",
+       "31364        37.0        90000.0              MORTGAGE               11.0   \n",
+       "27571        27.0       150000.0              MORTGAGE                2.0   \n",
+       "...           ...            ...                   ...                ...   \n",
+       "29961        38.0        35000.0                  RENT                5.0   \n",
+       "5390         24.0        45000.0              MORTGAGE                8.0   \n",
+       "860          21.0        23000.0              MORTGAGE                6.0   \n",
+       "15795        24.0        79200.0                  RENT                3.0   \n",
+       "23776        33.0        33504.0                  RENT                4.0   \n",
+       "\n",
+       "      loan_grade  loan_amnt  loan_int_rate  loan_percent_income  \\\n",
+       "20109          B    10750.0      10.750000                 0.28   \n",
+       "20513          A     4800.0       6.030000                 0.09   \n",
+       "1274           B    16000.0      12.690000                 0.30   \n",
+       "31364          B    22000.0       8.880000                 0.24   \n",
+       "27571          A    18000.0      11.620365                 0.12   \n",
+       "...          ...        ...            ...                  ...   \n",
+       "29961          D     5000.0      15.370000                 0.14   \n",
+       "5390           A     5000.0       5.790000                 0.11   \n",
+       "860            C     3000.0      13.350000                 0.13   \n",
+       "15795          D    16000.0      12.670000                 0.20   \n",
+       "23776          B     9600.0      10.990000                 0.29   \n",
+       "\n",
+       "       cb_person_default_on_file  cb_person_cred_hist_length  pel_missing  \\\n",
+       "20109                      False                        10.0            0   \n",
+       "20513                      False                         8.0            0   \n",
+       "1274                       False                         3.0            0   \n",
+       "31364                      False                        12.0            0   \n",
+       "27571                      False                         5.0            0   \n",
+       "...                          ...                         ...          ...   \n",
+       "29961                       True                        14.0            0   \n",
+       "5390                       False                         3.0            0   \n",
+       "860                        False                         3.0            0   \n",
+       "15795                       True                         2.0            0   \n",
+       "23776                      False                         8.0            0   \n",
+       "\n",
+       "       lir_missing  loan_intent  \n",
+       "20109            0          3.0  \n",
+       "20513            0          3.0  \n",
+       "1274             0          3.0  \n",
+       "31364            0          0.0  \n",
+       "27571            1          3.0  \n",
+       "...            ...          ...  \n",
+       "29961            0          5.0  \n",
+       "5390             0          3.0  \n",
+       "860              0          0.0  \n",
+       "15795            0          1.0  \n",
+       "23776            0          0.0  \n",
+       "\n",
+       "[22686 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 354,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat(\n",
+    "    [X_train_ordinal.drop('loan_intent', axis=1), encoded_dataframe], axis=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1aff46e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
