created numeric pipe.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -6692,6 +6692,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 127,
+   "id": "df66dd6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_pipe = Pipeline(\n",
+    "    steps = [\n",
+    "        ('it_imputer', IterativeImputer(max_iter=10, random_state=42)),\n",
+    "        ('winsorizer', Winsorizer(capping_method='iqr', tail='both', fold=1.5)),\n",
+    "        ('power_transformation', PowerTransformer(method='yeo-johnson', standardize=False)),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "937b757a",
    "metadata": {},
@@ -8170,11 +8186,11 @@
    "source": [
     "Pipeline(\n",
     "    steps = [\n",
-    "        ('it_imputer', IterativeImputer(max_iter=10, random_state=42)),\n",
+    "        \n",
     "        ('encoding', OneHotEncoder(handle_unknown='ignore', sparse_output=False)),\n",
-    "        ('winsorizer', Winsorizer(capping_method='iqr', tail='both', fold=1.5)),\n",
+    "        \n",
     "        (\"polynomial\", PolynomialFeatures(degree=2, interaction_only = False, include_bias=False)),\n",
-    "        ('power_transformation', PowerTransformer(method='yeo-johnson', standardize=False)),\n",
+    "        \n",
     "        ('stanrd_scaling', StandardScaler()),\n",
     "        ('smote', SMOTE())\n",
     "    ]\n",
