created categorical pipe.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -6692,7 +6692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "df66dd6a",
    "metadata": {},
    "outputs": [],
@@ -8184,18 +8184,19 @@
     }
    ],
    "source": [
-    "Pipeline(\n",
+    "categorical_pipe = Pipeline(\n",
     "    steps = [\n",
-    "        \n",
-    "        ('encoding', OneHotEncoder(handle_unknown='ignore', sparse_output=False)),\n",
-    "        \n",
-    "        (\"polynomial\", PolynomialFeatures(degree=2, interaction_only = False, include_bias=False)),\n",
-    "        \n",
-    "        ('stanrd_scaling', StandardScaler()),\n",
-    "        ('smote', SMOTE())\n",
-    "    ]\n",
-    ").fit(X_train, y_train)"
+    "        ('it_imputer', IterativeImputer(max_iter=10, random_state=42)),\n",
+    "        ('onehot', OneHotEncoder(handle_unknown='ignore', sparse_output=False)),\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2fc400e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -8203,7 +8204,14 @@
    "id": "ac92e8e7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "        (\"polynomial\", PolynomialFeatures(degree=2, interaction_only = False, include_bias=False)),\n",
+    "        \n",
+    "        ('stanrd_scaling', StandardScaler()),\n",
+    "        ('smote', SMOTE())\n",
+    "    ]\n",
+    ").fit(X_train, y_train)"
+   ]
   }
  ],
  "metadata": {
