corrected categorical pipe.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -8187,7 +8187,9 @@
     "categorical_pipe = Pipeline(\n",
     "    steps = [\n",
     "        ('it_imputer', IterativeImputer(max_iter=10, random_state=42)),\n",
-    "        ('onehot', OneHotEncoder(handle_unknown='ignore', sparse_output=False)),\n"
+    "        ('onehot', OneHotEncoder(handle_unknown='ignore', sparse_output=False)),\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
