exported linear processed dataset to data processed directory.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -6685,27 +6685,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
-   "id": "d18200c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['person_home_ownership', 'loan_intent', 'loan_grade'], dtype='object')"
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "categorical_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 313,
    "id": "9c169e67",
    "metadata": {},
@@ -6811,9 +6790,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "25272ce2",
+   "metadata": {},
+   "source": [
+    "### Linear Dataframe Exported"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db965d0a",
+   "id": "c7b6e301",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# linear_processed_df.to_csv(\n",
+    "#     path_or_buf = \"../data/processed/linear_processed_dataset\"\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c538cb96",
+   "metadata": {},
+   "source": [
+    "### Tree Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "745aec21",
    "metadata": {},
    "outputs": [],
    "source": []
