numeric pipe for tree dataset.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -6819,8 +6819,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 322,
    "id": "745aec21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_pipe = Pipeline(\n",
+    "    steps = [\n",
+    "        ('it_imputer', IterativeImputer(max_iter=10, random_state=42)),\n",
+    "        ('winsorizer', Winsorizer(capping_method='iqr', tail='both', fold=1.5))\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fd74378",
    "metadata": {},
    "outputs": [],
    "source": []
