--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -6834,8 +6834,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 323,
    "id": "9fd74378",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_pipe = Pipeline(\n",
+    "    steps = [\n",
+    "        ('it_imputer', SimpleImputer(strategy='most_frequent')),\n",
+    "        ('onehot', OneHotEncoder(handle_unknown='ignore', drop='if_binary', sparse_output=False)),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a20f1675",
    "metadata": {},
    "outputs": [],
    "source": []
