--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -6849,8 +6849,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 324,
    "id": "a20f1675",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers = [\n",
+    "        ('numeric', numeric_pipe, numeric_features),\n",
+    "        ('categorical', categorical_pipe, categorical_features)\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb717042",
    "metadata": {},
    "outputs": [],
    "source": []
