final pipeline for tree dataset.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -6849,7 +6849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": null,
    "id": "a20f1675",
    "metadata": {},
    "outputs": [],
@@ -6864,8 +6864,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 325,
    "id": "eb717042",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_pipeline = Pipeline(\n",
+    "    steps = [\n",
+    "        ('preprocess', preprocessor)\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4943cc22",
    "metadata": {},
    "outputs": [],
    "source": []
