fit_transform on final pipeline and converted array into pandas dataframe. Exported to data processed directory as tree_processed_df.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -6878,8 +6878,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 326,
    "id": "4943cc22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_config(transform_output=\"pandas\")\n",
+    "tree_processed_df = final_pipeline.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5afbda13",
+   "metadata": {},
+   "source": [
+    "### Tree Processed Dataset Export"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "id": "dc78bec1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree_processed_df.to_csv(\n",
+    "    path_or_buf = \"../data/processed/tree_processed_dataset\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd8bead2",
    "metadata": {},
    "outputs": [],
    "source": []
